# microcontroller-firmware

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Makefile  README.md  flake.nix  pico_sdk_import.cmake
.github/: renovate.json
.github/workflows/: build.yml  ci.yml
dshot/: CMakeLists.txt  dshot.c  dshot.h  main.c
pwm/: CMakeLists.txt  main.c  pwm.c  pwm.h
src/: log.c  log.h  main.c  motors.h  runtime_config.c  runtime_config.h  usb_comm.c  usb_comm.h  version.h
src-dshot/: CMakeLists.txt  dshot.c  dshot.h  main.c
src-pwm/: CMakeLists.txt  main.c  pwm.c
src/dshot/: CMakeLists.txt  control.c  control.h  dshot.c  dshot.h  dshot.pio  main.c  telemetry_usb.c  telemetry_usb.h
src/pwm/: control.c  control.h  main.c  pwm.c  pwm.h
tests/: test_dshot_control.c  test_dshot_protocol.c  test_main.c  test_pwm_control.c  test_runtime_config.c  test_usb_comm.c
tests/mocks/: dshot.pio.h  mock_sdk.h  version.h
tests/mocks/hardware/: clocks.h  gpio.h  pio.h  pwm.h  sync.h
tests/mocks/hardware/structs/: clocks.h  io_bank0.h
tests/mocks/pico/: error.h  stdio.h  time.h  types.h
tests/stubs/: dshot_stubs.c  log_stubs.c
tests/support/: dshot_control_host.h  dshot_stubs_host.h  pwm_control_host.h  runtime_config_host.h  usb_comm_host.h
tests/unity/: unity.c  unity.h  unity_internals.h
